# YaComponent

./: .clang-format  .cmake-format.py  .gitignore  CHANGES  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  CMakePresets.json  LICENSE  LICENSE_plantuml  README.md  README.rst  RELEASEINFO.md.in  RELEASENOTES.md  index.html  params.json
.github/: build_repo.yml
.github/workflows/: build_repo.yml
UserGuide/: UserGuide.html  genindex.html  objects.inv  search.html  searchindex.js
_sources/: UserGuide.txt
cmake/: FindInstallQt.cmake  FindPlantUML.cmake  FindSphinxBuild.cmake  FindZeroMQ.cmake  Protobuf.cmake  PyEnv.cmake  PyTestTools.cmake  YaComponent.cmake
cmake/sanitize/: asan.supp  lsan.supp
doc/: CMakeLists.txt  Concept.md  Concept.rst
doc/guide/: CMakeLists.txt  UserGuide.rst  conf.py  conf.py.in
doc/guide/examples/wavplayer/: AudioPlayerIfc.proto  AudioPlayerIfc.xml  CMakeLists.txt  SoundOutComponent.xml  WavFilePlayerComponent.xml  WavPlayer.xml  main.cpp
src/: CMakeLists.txt  YaComponentConfig.cmake.in
src/cpp/: CMakeLists.txt  IYaConnection.h  YaBuffer.cpp  YaBuffer.h  YaComponent.cpp  YaComponent.h  YaComponentBase.cpp  YaComponentBase.h  YaComponentConfig.cmake.in  YaComponentThread.cpp  YaComponentThread.h  YaPUBImpl.cpp  YaPUBImpl.h  YaProxyBase.cpp  YaProxyBase.h  YaSUBImpl.cpp  YaSUBImpl.h  YaStubBase.cpp  YaStubBase.h
src/cpp/lib/: CMakeLists.txt
src/cpp/lib/core/: CMakeLists.txt
src/cpp/lib/core/include/core/: YaComponentCore.h
src/cpp/lib/core/src/: YaComponentCore.cpp
src/cpp/lib/yacomponent/: CMakeLists.txt  YaComponent.cpp  YaComponentThread.cpp  YaPUBImpl.cpp  YaProxyBase.cpp  YaStubBase.cpp
src/cpp/lib/yacomponent/include/yacomponent/: YaComponent.h  YaComponentThread.h  YaPUBImpl.h  YaProxyBase.h  YaSUBImpl.h
src/cpp/lib/yacomponent/src/: CMakeLists.txt  YaBuffer.cpp  YaComponent.cpp  YaComponentThread.cpp  YaPUBImpl.cpp  YaProxyBase.cpp  YaSUBImpl.cpp  YaStubBase.cpp
src/lib/yacomponent/src/: CMakeLists.txt  YaBuffer.cpp  YaComponent.cpp  YaPUBImpl.cpp  YaProxyBase.cpp  YaSUBImpl.cpp  YaStubBase.cpp
src/perl/: CMakeLists.txt  YaCompLayout.pl  YaCompLayoutCodeGen.pm  YaCompLayoutDocGen.pm  YaCompLayoutParser.pm  YaComponent.pl  YaComponent.pm  YaComponentCodeGen.pm  YaComponentDocGen.pm  YaComponentIfc.pm  YaComponentIfcCodeGen.pm  YaComponentIfcParser.pm  YaComponentParser.pm
src/perl/code/cpp/: MainPre.cpp
src/perl/code/inc/: YaComponent.h
src/python/: CMakeLists.txt  PythonPackageInstall.cmake
src/python/yacomponent/: __init__.py  ctx.py  proxy.py  publisher.py  stub.py  subscriber.py  thread.py  utils.py  variables.py
src/tinyxml2/: CMakeLists.txt  README.txt  tixml2ex.h
test/: CMakeLists.txt
test/basics/reqresp/: BasicReqRespGuiTest.cpp  BasicReqRespGuiTest.h  BasicReqRespGuiTestMain.cpp  BasicReqRespTest.cpp  BasicReqRespTest.h  BasicReqRespTestMain.cpp  CMakeLists.txt
test/basics/reqresp/control/: ControlComp.xml
test/basics/reqresp/worker/: WorkerComp.xml  WorkerIfc.proto  WorkerIfc.xml
test/examples/interface/basic/: BasicInterface.proto  BasicInterface.xml  CMakeLists.txt
test/examples/layout/basic/: BasicLayout.xml  CMakeLists.txt  TextGenComp.xml  TextGenIfc.proto  TextGenIfc.xml  main1.cpp  main2.cpp  textgencomp.h  textoutcomp.h
test/examples/layout/text/: CMakeLists.txt  TextExampleMPMT.xml  TextExampleSPMT.xml  TextTest.cmake  textgenMPMT.cpp  textoutMPMT.cpp
test/examples/layout/text/textgen/: TextGenComp.xml  TextGenIfc.proto  TextGenIfc.xml  textgencomp.cpp  textgencomp.h
test/examples/layout/text/textout/: TextOutComp.xml  textoutcomp.cpp  textoutcomp.h
test/examples/layout/text/unittest/: TextUnittest.cpp  TextUnittest.h  textgencompunittest.cpp  textgencompunittest.h  textoutcompunittest.cpp  textoutcompunittest.h
test/layout/subscriptions/: CMakeLists.txt  PubSubUnittestMP.cpp  PubSubUnittestMP.h  PubSubUnittestMP_PUB.cpp  PubSubUnittestMP_PUB.h  PubSubUnittestMP_fast_SUB.cpp  PubSubUnittestMP_fast_SUB.h  PubSubUnittestMP_slow_SUB.cpp  PubSubUnittestMP_slow_SUB.h  PubSubUnittestSP.cpp  PubSubUnittestSP.h  PubSubUnittestSP_PUB.cpp  PubSubUnittestSP_PUB.h  PubSubUnittestSP_SUB.cpp  PubSubUnittestSP_SUB.h  publishercompunittest.cpp  publishercompunittest.h  subscriber_fast_compunittest.cpp  subscriber_fast_compunittest.h  subscriber_slow_compunittest.cpp  subscriber_slow_compunittest.h
test/layout/subscriptions/cpp/: CMakeLists.txt  PubSubUnittestMP.cpp  PubSubUnittestMP.h  PubSubUnittestMPMT.xml  PubSubUnittestMP_PUB.cpp  PubSubUnittestMP_PUB.h  PubSubUnittestMP_fast_SUB.cpp  PubSubUnittestMP_fast_SUB.h  PubSubUnittestMP_slow_SUB.cpp  PubSubUnittestMP_slow_SUB.h  PubSubUnittestSP.cpp  PubSubUnittestSP.h  PubSubUnittestSP_PUB.cpp  PubSubUnittestSP_PUB.h  PubSubUnittestSP_SUB.cpp  PubSubUnittestSP_SUB.h
test/layout/subscriptions/publisher/: PublisherComp.xml  PublisherIfc.proto  PublisherIfc.xml
test/layout/subscriptions/python/: CMakeLists.txt  conftest.py  publisher.cpp  publisher.h  pypubsubunittestmp.py  pypubsubunittestsp.py
test/layout/subscriptions/subscriber/: SubscriberComp.xml
test/layout/text/: CMakeLists.txt  TextExampleMPMT.xml  TextExampleSPMT.xml  TextUnittest.cpp  TextUnittest.h  TextUnittestMP.cpp  TextUnittestMP.h  TextUnittestMP_PUB.cpp  TextUnittestMP_PUB.h  TextUnittestMP_SUB.cpp  TextUnittestMP_SUB.h  textgencompunittest.cpp  textgencompunittest.h  textoutcompunittest.cpp  textoutcompunittest.h  textunittestguisp.py  textunittestsp.py
test/layout/text/textgen/: TextGenComp.xml  TextGenIfc.proto  TextGenIfc.xml
test/layout/text/textout/: TextOutComp.xml  TextOutIfc.xml
test/zmq/: CMakeLists.txt  YaPUBImpl.cpp  YaPUBImpl.h  YaPUBSUB.h  YaSUBImpl.cpp  YaSUBImpl.h  psenvbase.cpp  psenvbase.h  psenvpubipc.cpp  psenvpubtcp.cpp  psenvsubipc.cpp  psenvsubtcp.cpp
test/zmq_proto/: BasicInterface.proto  BasicInterface.xml  CMakeLists.txt  TextGenerator.proto  TextGenerator.xml  YaBuffer.cpp  YaBuffer.h  YaComponent.cpp  YaComponent.h  YaPUBImpl.cpp  YaPUBImpl.h  YaSUBImpl.cpp  YaSUBImpl.h  psenvbase.cpp  psenvbase.h  psenvpub.cpp  psenvsub.cpp
(+33 files in other folders)
